2025-11-07T00:59:45Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19154724184 # 801
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-07
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 676 1070 / 680 1074
* notice: next accum: outdated-unq outdated-all / unq all: 677 1071 / 680 1074
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-10-23] / []

2025-11-06T00:59:48Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19121274235 # 800
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-06
* notice: last 14d: unq all: 4 4
* notice: prev accum: outdated-unq outdated-all / unq all: 663 1057 / 676 1070
* notice: next accum: outdated-unq outdated-all / unq all: 676 1070 / 680 1074
* notice: prev exec diff / last date diff / accum: unq all: +4 +4 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-10-04 2025-10-05 2025-10-06 2025-10-07 2025-10-08 2025-10-09 2025-10-10 2025-10-11 2025-10-12 2025-10-13 2025-10-14 2025-10-15 2025-10-16] / [2025-10-23 2025-10-28 2025-10-30]

2025-10-17T00:52:40Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18579007175 # 799
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-17
* notice: last 14d: unq all: 4 13
* notice: prev accum: outdated-unq outdated-all / unq all: 661 1055 / 675 1069
* notice: next accum: outdated-unq outdated-all / unq all: 663 1057 / 676 1070
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1