@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-11-07T00:59:45Z",
+  "timestamp" : "2025-11-10T01:02:40Z",
   "count_outdated" : 1071,
   "uniques_outdated" : 677,
-  "count" : 1074,
-  "uniques" : 680,
+  "count" : 1075,
+  "uniques" : 681,
   "clones" : [
     {
       "timestamp": "2025-10-28T00:00:00Z",
@@ -16,6 +16,15 @@
     },
     {
       "timestamp": "2025-10-30T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-11-09T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
