@@ -1,3 +1,12 @@
+2025-11-10T01:02:40Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19217372228 # 804
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-10
+* notice: last 14d: unq all: 4 4
+* notice: prev accum: outdated-unq outdated-all / unq all: 677 1071 / 680 1074
+* notice: next accum: outdated-unq outdated-all / unq all: 677 1071 / 681 1075
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-11-09]
+
 2025-11-07T00:59:45Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19154724184 # 801
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-07
